--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -61,6 +61,8 @@
     --button-primary-color: #4169E2;
     --button-primary-color-hover: #476ff1;
 
+    --input-icon-color: #6c757d;
+
     --vh: 1vh;
 }
 
